--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install and Build 🔧
+        # THIS IS THE NEW PART:
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           npm ci
           npm run build
@@ -22,5 +25,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist # The folder the build process generates
-          branch: gh-pages # The branch the action should deploy to
+          folder: dist
+          branch: gh-pages
